Update swagger docs.
