# docs/swagger.json
@@ -182,6 +182,12 @@
                             "$ref": "#/definitions/models.BadRequestError"
                         }
                     },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "$ref": "#/definitions/models.ConflictError"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -212,6 +218,28 @@
                 "errorMessage": {
                     "type": "string",
                     "example": "invalid request body"
+                }
+            }
+        },
+        "models.ConflictError": {
+            "type": "object",
+            "properties": {
+                "additionalData": {
+                    "type": "object",
+                    "properties": {
+                        "statusCode": {
+                            "type": "integer",
+                            "example": 409
+                        }
+                    }
+                },
+                "errorCode": {
+                    "type": "string",
+                    "example": "ERR_CC_USER_ALREADY_EXIST"
+                },
+                "errorMessage": {
+                    "type": "string",
+                    "example": "user already exist with requested mobile number"
                 }
             }
         },
